﻿CHANGELOG
---------
Patchnote-1.4 - 09/07/2018
  - Ajout du rapport d'indicateurs de gestion.
  - Ajout du footer sur chaque page du rapport de gestion.
    - Ajout des couleurs sur les barcharts.

Patchnote-1.3 - 22/06/2018
  - Ajout des comparaisons des visites par communes et par localités [WIP]
  - Correction du cas où le CELL_TYPE_FORMULA renvoyait une erreur dans comparaison années / centres.
  - Sécurisation des informations de connexion aux BDD dans un fichier .PROPERTIES

Patchnote-1.2 - 25/04/2018
  - Refactor de l'itération Excel (SoinsInfirmiers.IteratorExcel)
  - Ajout de la fonction de comparaison par centre
  - Ajout des chemins absolus pour être utilisé dans toutes les ASD
  [WIP] Ajout Rapport Vinciane
  - Ajout comparaison par commune

Patchnote-1.1 - 06/04/2018 MàJ 18/04/2018
  - Ajout des écrans de sélection
  - Ajout de la fonctionalité de test des connexions
  - Correction du chemin du Patchnote
  - Responsive Design
  - Optimisations
  - Refonte fenêtre 'Rapport d'activité'

Patchnote-1.0 = Janvier 2018
  - Lancement 1.0
  - Ajout de données au contingent
  - Correction de bugs
  - Correction de glitchs graphiques
  - Traduction de tous les items

Patchnote-0.3.2 = 08/01/2018
  - Rapport d'activité ajusté fonctionnel
  - Intégration de la police INTERSTATE
  - Secteurs de Philippevilles-Florennes fusionnés.

Patchnote-0.3.1 = 12/12/2017
  - Rapport d'activité integré

Patchnote-0.3.0 = 06/12/2017
  - Refactorisation complète du système de fichiers
  - Correction des warnings IDEA
  - Création de l'objet 'PDF' pour les rapports
  - Création de l'objet 'Menu' pour optimiser et faciliter la maintenance
  - Mise à jour de l'UI

Patchnote-0.2.4 = 09/10/2017
  - Ajout d'un ratio au niveau de POI Excel pour éviter le blocage des zip-bombs provoqué par les tableaux mensuels
        trop lourds et qui empêchaient la DB de se mettre à jour

changelog-0.2.3 = 25/09/2017
  - Tabs "Travailleurs" et "Secteurs" fonctionnels dans l'ASDB