@@ -2,7 +2,7 @@
 
 [![GitHub version](https://badge.fury.io/gh/Neufunk%2FStatistiques.svg)](https://badge.fury.io/gh/Neufunk%2FStatistiques)
 
-SDK 1.8.0_161 \
+SDK 1.8.0_181 \
 May 05, 2017
 
 ### LIBRARIES :
