@@ -1,8 +1,9 @@
-Patchnote = version 1.4 - 09/07/2018 \n\
+Patchnote = version 1.4 - 09/07/2018 MAJ 13/08/2018 \n\
   \n\
   - Ajout du rapport d'indicateurs de gestion.\n\
   - Ajout du footer sur chaque page du rapport de gestion.\n\
-  - Ajout des couleurs sur les barcharts
+  - Ajout des couleurs sur les barcharts.\n\
+  - Passage et ajustements au SDK 1.8.0_181 (Java 8) pour coller avec version FASD.
   
 
 
