@@ -3,7 +3,8 @@
 Patchnote-1.4 - 09/07/2018
   - Ajout du rapport d'indicateurs de gestion.
   - Ajout du footer sur chaque page du rapport de gestion.
-    - Ajout des couleurs sur les barcharts.
+  - Ajout des couleurs sur les barcharts.
+  - Passage et ajustements au SDK 1.8.0_181 (Java 181) pour coller avec version FASD.
 
 Patchnote-1.3 - 22/06/2018
   - Ajout des comparaisons des visites par communes et par localités [WIP]
